--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "version": "1.0.0",
     "license": "MIT",
     "require":{
-        "larakit/lk-staticfiles":"*"
+        "larakit/sf-angular-sanitize":"*",
+        "larakit/sf-bootstrap":"*"
     },
     "autoload": {
         "files": [
